collect() improved